--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Ben Winding | Awesome Dev</title>
+	<title>Jack Church | Awesome Dev</title>
 
 	<link rel="icon" href="favicon.ico" type="image/png" />
 
@@ -25,14 +25,14 @@
 </head>
 <body>
 	<main>
-		<div class="intro">Hello, I'm Ben!</div>
+		<div class="intro">Hello, I'm Jack!</div>
 		<div class="tagline">Software Developer | Hardware Hacker | Script Kiddie</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
-			<a target="_blank" href="https://github.com/benwinding"><i class="fab fa-github"></i></a>
-			<a target="_blank" href="https://twitter.com/codingslowly"><i class="fab fa-twitter"></i></a>
-			<a target="_blank" href="https://stackoverflow.com/story/benwinding"><i class="fab fa-stack-overflow"></i></a>
-			<a target="_blank" href="https://www.linkedin.com/in/benwinding"><i class="fab fa-linkedin"></i></a>
+			<a target="_blank" href="https://github.com/jackchurch"><i class="fab fa-github"></i></a>
+			<a target="_blank" href="https://twitter.com/jackchurch"><i class="fab fa-twitter"></i></a>
+			<a target="_blank" href="https://stackoverflow.com/story/jackchurch"><i class="fab fa-stack-overflow"></i></a>
+			<a target="_blank" href="https://www.linkedin.com/in/jackchurch"><i class="fab fa-linkedin"></i></a>
 			<!-- <a target="_blank" href="https://medium.com/@flexdinesh"><i class="fab fa-medium"></i></a> -->
 			<!-- <a target="_blank" href="https://www.freecodecamp.org"><i class="fab fa-free-code-camp"></i></a> -->
 			<!-- <a target="_blank" href="https://www.behance.net"><i class="fab fa-behance"></i></a> -->
