--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/jackchurch"><i class="fab fa-github"></i></a>
-			<a target="_blank" href="https://twitter.com/jackchurch"><i class="fab fa-twitter"></i></a>
+			<a target="_blank" href="https://twitter.com/_jackchurch"><i class="fab fa-twitter"></i></a>
 			<a target="_blank" href="https://stackoverflow.com/story/jackchurch"><i class="fab fa-stack-overflow"></i></a>
 			<a target="_blank" href="https://www.linkedin.com/in/jackchurch"><i class="fab fa-linkedin"></i></a>
 			<!-- <a target="_blank" href="https://medium.com/@flexdinesh"><i class="fab fa-medium"></i></a> -->
