--- a/doestheelevatorwork.html
+++ b/doestheelevatorwork.html
@@ -2,6 +2,7 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=windows-1252">
 	<link rel="icon" href="favicon_elevator.ico" type="image/png" />
+	<meta http-equiv="refresh" content="10;url=https://www.youtube.com/watch?v=1RuoZeKXWQY&list=PLVQYiy6xNUxz5wbzZn4tfUhF4djgzscB-&index=1" />
 </head>
 <body>
 	<h1 style="font-family:helvetica;
