--- a/doestheelevatorwork.html
+++ b/doestheelevatorwork.html
@@ -2,17 +2,35 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=windows-1252">
 	<link rel="icon" href="favicon_elevator.ico" type="image/png" />
-	<meta http-equiv="refresh" content="10;url=https://www.youtube.com/watch?v=1RuoZeKXWQY&list=PLVQYiy6xNUxz5wbzZn4tfUhF4djgzscB-&index=1" />
+	<!-- <meta http-equiv="refresh" content="10;url=https://www.youtube.com/watch?v=1RuoZeKXWQY&list=PLVQYiy6xNUxz5wbzZn4tfUhF4djgzscB-&index=1" /> -->
 </head>
 <body>
 	<h1 style="font-family:helvetica;
 	text-align:center;
 	width:100%;
-	height:100%;
+	height:20%;
 	display:flex;
 	align-items:center;
 	justify-content:center;">
-	No, take the stairs.
+	No, it's still leg day.
 	</h1>
+	
+	<p style="font-family:helvetica;
+	text-align:center;
+	width:100%;
+	height:50%;
+	display: block;
+	align-items:center;
+	justify-content:center;">   
+	<iframe 
+
+	width="560" height="315" 
+		src="https://www.youtube.com/embed/KBk9x2Dk7zg" 
+		title="YouTube video player" frameborder="0" 
+		allow="accelerometer; autoplay; clipboard-write; 
+		       encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+	</iframe>
+</p>
+	
 </body>
 </html>
