Replaced Denise Austin with chair stair guy.

--- a/doestheelevatorwork.html
+++ b/doestheelevatorwork.html
@@ -12,7 +12,7 @@
 	display:flex;
 	align-items:center;
 	justify-content:center;">
-	No, it's still leg day.
+	Nope, it's still leg day.
 	</h1>
 	
 	<p style="font-family:helvetica;
@@ -21,15 +21,18 @@
 	height:50%;
 	display: block;
 	align-items:center;
-	justify-content:center;">   
-	<iframe 
+	justify-content:center;">
+	
+	<img src="chair-stiars-drink.gif">
+
+	<!-- <iframe 
 
 	width="560" height="315" 
 		src="https://www.youtube.com/embed/KBk9x2Dk7zg" 
 		title="YouTube video player" frameborder="0" 
 		allow="accelerometer; autoplay; clipboard-write; 
 		       encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-	</iframe>
+	</iframe> -->
 </p>
 	
 </body>
