--- a/doestheelevatorwork.html
+++ b/doestheelevatorwork.html
@@ -1,8 +1,7 @@
 <html>
 <head>
-	<meta http-equiv="content-type" content="text/html; charset=windows-1252">
+	<meta charset="utf-8">
 	<link rel="icon" href="favicon_elevator.ico" type="image/png" />
-	<!-- <meta http-equiv="refresh" content="10;url=https://www.youtube.com/watch?v=1RuoZeKXWQY&list=PLVQYiy6xNUxz5wbzZn4tfUhF4djgzscB-&index=1" /> -->
 </head>
 <body>
 	<h1 style="font-family:helvetica;
@@ -25,14 +24,6 @@
 	
 	<img src="chair-stiars-drink.gif">
 
-	<!-- <iframe 
-
-	width="560" height="315" 
-		src="https://www.youtube.com/embed/KBk9x2Dk7zg" 
-		title="YouTube video player" frameborder="0" 
-		allow="accelerometer; autoplay; clipboard-write; 
-		       encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-	</iframe> -->
 </p>
 	
 </body>
