Updated does the elevator work image to mario gif.

--- a/doestheelevatorwork.html
+++ b/doestheelevatorwork.html
@@ -1,7 +1,8 @@
 <html>
 <head>
-	<meta charset="utf-8">
+	<meta http-equiv="content-type" content="text/html; charset=windows-1252">
 	<link rel="icon" href="favicon_elevator.ico" type="image/png" />
+	<!-- <meta http-equiv="refresh" content="10;url=https://www.youtube.com/watch?v=1RuoZeKXWQY&list=PLVQYiy6xNUxz5wbzZn4tfUhF4djgzscB-&index=1" /> -->
 </head>
 <body>
 	<h1 style="font-family:helvetica;
@@ -22,7 +23,7 @@
 	align-items:center;
 	justify-content:center;">
 	
-	<img src="chair-stiars-drink.gif">
+	<img src="mario-running.gif">
 
 </p>
 	
