--- a/doestheelevatorwork.html
+++ b/doestheelevatorwork.html
@@ -14,6 +14,15 @@
 	justify-content:center;">
 	Nope, it's still leg day.
 	</h1>
+	<!-- <h1 style="font-family:helvetica;
+	text-align:center;
+	width:100%;
+	height:20%;
+	display:flex;
+	align-items:center;
+	justify-content:center;">
+	Yes, but you need exercise.
+	</h1>	 -->
 	
 	<p style="font-family:helvetica;
 	text-align:center;
@@ -24,7 +33,7 @@
 	justify-content:center;">
 	
 	<img src="mario-running.gif">
-
+	<!-- <img src="elf-buttons-elevator.gif"> -->
 </p>
 	
 </body>
