--- a/doestheelevatorwork.html
+++ b/doestheelevatorwork.html
@@ -5,24 +5,16 @@
 	<!-- <meta http-equiv="refresh" content="10;url=https://www.youtube.com/watch?v=1RuoZeKXWQY&list=PLVQYiy6xNUxz5wbzZn4tfUhF4djgzscB-&index=1" /> -->
 </head>
 <body>
-	<h1 style="font-family:helvetica;
+	
+	 <h1 style="font-family:helvetica;
 	text-align:center;
 	width:100%;
 	height:20%;
 	display:flex;
 	align-items:center;
 	justify-content:center;">
-	Nope, it's still leg day.
+	Yes, but exercise is good.
 	</h1>
-	<!-- <h1 style="font-family:helvetica;
-	text-align:center;
-	width:100%;
-	height:20%;
-	display:flex;
-	align-items:center;
-	justify-content:center;">
-	Yes, but you need exercise.
-	</h1>	 -->
 	
 	<p style="font-family:helvetica;
 	text-align:center;
@@ -32,8 +24,8 @@
 	align-items:center;
 	justify-content:center;">
 	
-	<img src="mario-running.gif">
-	<!-- <img src="elf-buttons-elevator.gif"> -->
+
+<img src="elf-buttons-elevator.gif">
 </p>
 	
 </body>
