--- a/doestheelevatorwork.html
+++ b/doestheelevatorwork.html
@@ -13,7 +13,7 @@
 	display:flex;
 	align-items:center;
 	justify-content:center;">
-	Yes, but exercise is good.
+	Nope
 	</h1>
 	
 	<p style="font-family:helvetica;
@@ -25,7 +25,7 @@
 	justify-content:center;">
 	
 
-<img src="elf-buttons-elevator.gif">
+	<img src="mario-running.gif">
 </p>
 	
 </body>
