--- a/doestheelevatorwork.html
+++ b/doestheelevatorwork.html
@@ -13,7 +13,7 @@
 	display:flex;
 	align-items:center;
 	justify-content:center;">
-	Yep
+	Nope
 	</h1>
 	
 	<p style="font-family:helvetica;
@@ -23,9 +23,9 @@
 	display: block;
 	align-items:center;
 	justify-content:center;">
-	
+	 
 
-	<img src="elf-buttons-elevator.gif">
+	<img src="mario-running.gif">
 </p>
 	
 </body>
