Cleaned up folder structure, does the elevator work is now dark mode, presenation timer renamed to pt.html, new fonts.

--- a/doestheelevatorwork.html
+++ b/doestheelevatorwork.html
@@ -1,19 +1,19 @@
 <html>
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=windows-1252">
-	<link rel="icon" href="favicon_elevator.ico" type="image/png" />
+	<link rel="icon" href="elevator/favicon_elevator.ico" type="image/png" />
 	<!-- <meta http-equiv="refresh" content="10;url=https://www.youtube.com/watch?v=1RuoZeKXWQY&list=PLVQYiy6xNUxz5wbzZn4tfUhF4djgzscB-&index=1" /> -->
 </head>
-<body>
-	
+<body style="background-color: black;">
 	 <h1 style="font-family:helvetica;
 	text-align:center;
 	width:100%;
 	height:20%;
 	display:flex;
 	align-items:center;
-	justify-content:center;">
-	Nope
+	justify-content:center;
+	color: white;">
+	Yep
 	</h1>
 	
 	<p style="font-family:helvetica;
@@ -25,7 +25,7 @@
 	justify-content:center;">
 	 
 
-	<img src="mario-running.gif">
+	<img src="elevator/elf-buttons-elevator.gif">
 </p>
 	
 </body>
