Back button added to presnetion timer.

--- a/pt.html
+++ b/pt.html
@@ -34,5 +34,6 @@
 				<script src="pt/presentaion-timer.js"></script>
 			</div>
 		</div>
+		<button id="backButton" onclick="reload()">Back</button>
 	</body>
 </html>
