Updated submit button to presentation timer.

--- a/pt.html
+++ b/pt.html
@@ -25,7 +25,7 @@
 							<label class="not-first-label">Minutes:<input id="warningMinutes" class="number-box" type="number" name="warningMinutes" value="15" max="59" min="0"></label>
 						</secion>
 						<br><br><br><br>
-						<button type="submit">Begin Timer</button>
+						<button id="submitButton" "type="submit">Begin Timer</button>
 					</form>
 				</div>
 				<div  class="countDownDiv">
